# FakeNotify

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  README.md  docker-compose.example.yml  fakenotify.service  install-release.sh  install.sh
.forgejo/workflows/: ci.yaml  release.yaml  sync.yml
.github/workflows/: ci.yml  release.yml
crates/daemon/: Cargo.toml
crates/daemon/src/: cli.rs  config.rs  main.rs  server.rs  state.rs  watcher.rs
crates/preload/: Cargo.toml
crates/preload/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: event.rs  lib.rs  message.rs  socket.rs
docker-mods/: Dockerfile
docker-mods/root/etc/s6-overlay/s6-rc.d/init-fakenotify/: run  up
