[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/zachhandley/FakeNotify"

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
bitflags = "2"
libc = "0.2"
thiserror = "2"

# Protocol
bincode = "1"

# Daemon
tokio = { version = "1", features = ["full"] }
notify = "8"
notify-debouncer-full = "0.5"
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
parking_lot = "0.12"

# Preload
ctor = "0.4"
